Initial commit of Vaxicare

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,8 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+VAXICARE_UPLOAD_STORE_FILE=vaxicare.keystore
+VAXICARE_UPLOAD_KEY_ALIAS=vaxicare-alias
+VAXICARE_UPLOAD_STORE_PASSWORD=Arundhati@12
+VAXICARE_UPLOAD_KEY_PASSWORD=Arundhati@12
